<resources>
    <string name="app_name">Mekanly</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="error_no_content">Maglumat ýok</string>
    <string name="error_failure">Ýalňyşlyk ýüze çykdy</string>
    <string name="error_no_internet">Internet elýeter däl</string>
    <string name="select_language">Dil saýlan</string>
    <string name="house_for_sale">Satlyk jaý</string>
    <string name="house_for_rent">Kireýne jaý</string>
    <string name="room_for_rent">Kireýne otag</string>
    <string name="office_for_rent">Kireýne ofis</string>
    <string name="commercial_rent">Kireýne söwda emläk</string>
    <string name="commercial_sale">Satlyk söwda emläk</string>
    <string name="other_real_estate">Beýleki emläkler</string>
    <string name="splash_gif">splash_gif</string>
    <string name="language">Dil</string>
    <string name="favorites">Halanlarym</string>
    <string name="reviews">Teswirler</string>
    <string name="rules">Düzgünnama</string>
    <string name="contact">Habarlaşmak</string>
    <string name="help">Kömekçi</string>
    <string name="logout">Ulgamdan çykmak</string>
    <string name="info_profile">Emligiňiz bilen mahabatlandyryň we girdeji gazanyň. Bu aňsat.</string>
    <string name="title_profile">Jaýyňyzy şu ýerden goşuň!</string>
    <string name="add_home">Jaý goşmak</string>
    <string name="add_a_business_profile">Biznes profile goşmak</string>
    <string name="home_page">Baş sahypa</string>
    <string name="properties">Emläkler</string>
    <string name="business_profile">Biznes profil</string>
    <string name="menu">Menu</string>
    <string name="filter">Filterler</string>
    <string name="section">Bölüm</string>
    <string name="not_selected">Saýlanmadyk</string>
    <string name="location_text">Ýerleşýän ýeri</string>
    <string name="rooms_number">Otag sany</string>
    <string name="all">Ählisi</string>
    <string name="floor_number">Gat sany</string>
    <string name="repair">Remont</string>
    <string name="possibilities">Mümkinçilikler</string>
    <string name="show_newly_added_properties">Täze goşulan emläkleri görkez</string>
    <string name="property_type">Emläk görnüşi</string>
    <string name="general_area">Umumy meýdany</string>
    <string name="at_least">iň az</string>
    <string name="the_most">iň köp</string>
    <string name="price">Bahа</string>
    <string name="the_cheapest">iň arzan</string>
    <string name="the_most_expensive">iň gymmat</string>
    <string name="organize">Tertipleme</string>
    <string name="search">Gözle</string>
    <string name="show_only_images">Diňe suratly jaýlary görkez</string>
    <string name="thats_all">Hemmesi</string>
    <string name="cancel">GOÝ BOLSUN</string>
    <string name="accept">KABUL ET</string>
    <string name="plan_house">Plan jaý</string>
    <string name="valley">Daça</string>
    <string name="semi_elite">Pol-Elitka</string>
    <string name="elite">Elitka</string>
    <string name="cottage">Kottej</string>
    <string name="apartment">Kwartira</string>
    <string name="turkmen_language">Türkmençe</string>
    <string name="russian_language">Русский</string>
    <string name="error_message_phone">Error, please check your phone number</string>
    <string name="comments">Teswirler</string>
    <string name="details">Maglumatlar</string>
    <string name="opportunity">Mümkinçilikler</string>
    <string name="report">Nägilelik bildirmek</string>
    <string name="wifi">WI-FI</string>
    <string name="washer">Kir maşyn</string>
    <string name="tv">Telewizor</string>
    <string name="conditioner">Kondisioner</string>
    <string name="wardrobe">Mebel-şkaf</string>
    <string name="bed">Spalny</string>
    <string name="hot_water">Gyzgyn suw</string>
    <string name="fridge">Sowadyjy</string>
    <string name="shower">Duş</string>
    <string name="kitchen">Aşhana</string>
    <string name="mangal">Mangal</string>
    <string name="basseýn">Basseýn</string>
    <string name="kitchen_mebel">Aşhana mebel</string>
    <string name="balcony">Balkon</string>
    <string name="work_table">Iş stoly</string>
    <string name="lift">Lift</string>
    <string name="pech">Peç</string>
    <string name="hot">Gyzgyn</string>
    <string name="send">Send</string>
    <string name="enter">Enter</string>
    <string name="done">Done</string>
    <string name="enter_house_name">Enter house name</string>
    <string name="business_profiles">Business profiles</string>
    <string name="account">Akkaunt</string>
    <string name="press_to_log_in">Ulgama girmek</string>
    <string name="my_announcements">Bildirişlerim</string>
    <string name="add_house">Jaý goşmak</string>
    <string name="name">Ady</string>
    <string name="realtor">Realtor</string>
    <string name="owner">Eýesi</string>
    <string name="location">Ýerleşýän ýeri</string>
    <string name="category">Kategoriýa</string>
    <string name="bahasy">Bahasy</string>
    <string name="price_from_low_to_high">Arzandan gymmada</string>
    <string name="price_from_high_to_low">Gymmatdan arzana</string>
    <string name="add_announcement">Bildiriş goşmak</string>
    <string name="terms_of_use">Düzgünnama</string>
    <string name="contact_us">Habarlaşmak</string>
    <string name="support">Kömekçi</string>
    <string name="logout_question">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="confirm">Tassyklamak</string>
    <string name="agree_with_terms">Düzgünnamany okadym we kabul etdim</string>
    <string name="or">ÝA-DA</string>
    <string name="email">Elektron poçta</string>
    <string name="enter_otp">Enter confirmation code</string>
    <string name="retry">Täzeden synanyşmak</string>
    <string name="log_in_to_write_comment">Log in to write comment</string>
    <string name="comments_with_count">Teswitler (%d)</string>
</resources>