<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical"
    android:padding="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_close"
            android:backgroundTint="@color/black"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/deleteText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/deleteText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="5dp"
            android:text="Arassala"
            android:textColor="@color/bg_blue_two"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/buttonBolum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/section"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/bolumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/not_selected"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_next_btn" />


    </LinearLayout>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        app:dividerColor="@color/line_divider" />


    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/location_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/not_selected"
                android:textColor="@color/text_color_gray"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_next_btn" />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        app:dividerColor="@color/line_divider" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:text="@string/price"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="iň arzan"
            android:fontFamily="@font/roboto_regular"
            android:inputType="number"
            android:paddingEnd="50dp"
            android:textColor="@color/grey_text_color"
            android:textColorHint="@color/text_color_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="—"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="iň gymmat"
            android:inputType="number"
            android:fontFamily="@font/roboto_regular"
            android:paddingEnd="50dp"
            android:textColor="@color/grey_text_color"
            android:textColorHint="@color/text_color_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="15dp"
        app:dividerColor="@color/line_divider" />

    <LinearLayout
        android:id="@+id/popupMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/organize"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end"
            android:text="@string/not_selected"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="3dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_down"
            tools:ignore="ContentDescription" />


    </LinearLayout>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/line_divider" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/btn_price_color"
        android:fontFamily="@font/roboto_regular"
        android:text="Gözle"
        android:textColor="@android:color/white"
        app:cornerRadius="8dp" />

</LinearLayout>
